examples/test/testpolicy17859.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17859
  namespace: namespace268
spec:
  podSelector:
    matchLabels:
      key6: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key37: value13
          key44: value13
      podSelector:
        matchLabels:
          key43: value7
          key41: value0
          key16: value6
